@@ -8,3 +8,32 @@ require('webcrypto-test-suite')({
     if (spec.includes('RS512') && spec.includes('generateKey')) return true;
   }
 });
+
+describe('msrCryptoPermanentForceSync', () => {
+  beforeEach(() => jest.resetModules());
+
+  it('attempts to use Worker if available', async () => {
+    global.Worker = jest.fn(() => {
+      throw 'Will get caught';
+    });
+    const msrCrypto = require('../dist/msrcrypto');
+    await msrCrypto.subtle.digest(
+      { name: 'SHA-256' },
+      new Uint8Array([1,2,3]).buffer
+    );
+    expect(global.Worker).toHaveBeenCalled();
+  });
+
+  it('does not attempt to use Worker if msrCryptoPermanentForceSync enabled', async () => {
+    global.msrCryptoPermanentForceSync = true;
+    global.Worker = jest.fn(() => {
+      throw 'Will get caught';
+    });
+    const msrCrypto = require('../dist/msrcrypto');
+    await msrCrypto.subtle.digest(
+      { name: 'SHA-256' },
+      new Uint8Array([1,2,3]).buffer
+    );
+    expect(global.Worker).not.toHaveBeenCalled();
+  });
+});
